# agent-sec-core

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  README.md.bak  README_CN.md  agent-sec-core.spec.in
agent-sec-cli/: BUILD.md  Cargo.toml  README.md  RUST_INTEGRATION.md  pyproject.toml  pyproject.toml.bak  requirements.txt
agent-sec-cli/dev-tools/backend-skill/: QUICK_REFERENCE.md  SKILL.md
agent-sec-cli/dev-tools/backend-skill/sub-skills/: add-rust-module.md
agent-sec-cli/dev-tools/backend-skill/templates/: python_backend.py  rust_backend.py
agent-sec-cli/src/: lib.rs
agent-sec-cli/src/agent_sec_cli/: __init__.py  __main__.py  cli.py
agent-sec-cli/src/agent_sec_cli/asset_verify/: __init__.py  config.conf  errors.py  verifier.py
agent-sec-cli/src/agent_sec_cli/code_scanner/: __init__.py  errors.py  models.py  scanner.py
agent-sec-cli/src/agent_sec_cli/prompt_scanner/: __init__.py  cli.py  config.py  exceptions.py  preprocessor.py  result.py  scanner.py  verdict.py
agent-sec-cli/src/agent_sec_cli/sandbox/: __init__.py  bash_ast.py  classify_command.py  classify_command.py.bak  rules.py  sandbox_policy.py  sandbox_policy.py.bak
agent-sec-cli/src/agent_sec_cli/security_events/: __init__.py  config.py  schema.py  sqlite_reader.py  sqlite_writer.py  summary_formatter.py  writer.py
agent_frontend/: README.md  (+2 more)
linux-sandbox/: .gitignore  Cargo.toml  build.rs
linux-sandbox/docs/: README.md  dev-guide.md
linux-sandbox/src/: error.rs  lib.rs  main.rs  path.rs  proxy.rs  seccomp.rs
linux-sandbox/tests/suite/: managed_proxy.rs  mod.rs
(+174 files in other folders)
